# npeg

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  core.h  main.c  meson.build  out.pbm  out.pgm  pbm_image.c  pbm_image.h  pyproject.toml  res.pbm  todo.md  tox.ini
.github/workflows/: ci.yaml
core/include/: benchmark.h
core/src/: dev.c  meson.build
core/src/algorithms/: interpolation.c
core/src/img/img/: img.c
core/src/math/: matrix.c  matrix.h
npeg/: __init__.py  base_img.py  exceptions.py  img.py  matrix.py  pbm_img.py
npeg-py/: clib.py  img.py  img_format.py  main.py  matrix.py  pyproject.toml
npeg-py/npeg/: __init__.py  exceptions.py  img.py  pbm_img.py
npeg-py/npeg/bindings/: __init__.py  img_struct.py  interpolation.py  matrix_struct.py  pbm_img_struct.py
npeg/bindings/: __init__.py  img_result_struct.py  img_struct.py  interpolation.py  matrix_struct.py  pbm_img_struct.py
npeg/img/: __init__.py  img.py  pbm_img.py
npeg/src/algorithms/: rotate.c
npeg/src/img/: img.h
npeg/src/img/img/: img_type.h
scripts/: build.py  version.py
src/: algorithm.c  algorithm.h  arg.c  arg.h  die.c  main.c  meson.build
src/alghoritms/: alghoritms.c  alghoritms.h
src/alghoritms/mirror/: pbm_mirror.c  pbm_mirror.h
src/cli/: args_parser.c  args_parser.h  cli.c  cli.h  meson.build
src/core/: core.c  core.h  meson.build  npeg.h  options.h  options_validator.c
src/core/alghoritms/: alghoritms.c  alghoritms.h  filter.c  filter.h
src/core/alghoritms/filter/: pbm_filter.c  pbm_filter.h
src/core/alghoritms/flip/: pbm_flip.c  pbm_flip.h
src/core/alghoritms/mirror/: pbm_mirror.c  pbm_mirror.h
src/core/alghoritms/rotate/: pbm_rotate.c  pbm_rotate.h
src/core/algorithms/: algorithm.c  algorithm.h  meson.build
src/core/image_formats/: image_formats.c  image_formats.h  img.c  img.h  pbm.c  pbm.h  pbm_image.c  pbm_image.h  pgm.c  pgm.h
src/core/image_formats/pbm/: pbm.c  pbm.h
src/core/image_formats/pgm/: pgm.c  pgm.h
src/core/image_types/: pbm_image.c  pbm_image.h
src/core/math/: matrix.c  matrix.h  meson.build  u16_matrix.c  u8_matrix.c  vector.c  vector.h
src/core/math/matrix/: matrix.h  matrix_u16.h  matrix_u8.c  matrix_u8.h  meson.build
src/core/math/vec/: meson.build  vec_f32.c  vec_f32.h
src/include/: die.h
src/npeg/: meson.build  npeg.c
src/npeg/algorithms/: algorithms.h  interpolation.c  interpolation.h  meson.build  post_process.h  rotate.c  scale.c
src/npeg/image_formats/: _cast_formats.c  img.c  img.h  img_magics.h  meson.build
src/npeg/image_formats/pbm/: pbm.c  pbm.h
src/npeg/img/img/: _cast_formats.c  img.c
src/npeg/img/pbm/: pbm.c
src/npeg/math/: matrix.c  matrix.h  meson.build  trig.h
src/npeg/math/matrix/: matrix.c  matrix.h
src/utils/: utils.c  utils.h
src/validator/: options_validator.c  options_validator.h
tests/: __init__.py  test.py  test_img_interpolation.py  test_img_read.py  test_img_rotation.py  test_img_write.py  test_matrix.py  test_pbm_img.py  test_sample.py
