[tool.poetry]
name = "npeg"
version = "0.0.1"
description = "Small and blazingly fast python library for image processing."
authors = ["NeoTheBestDeveloper <kiankasey91n@gmail.com>"]
license = "GPLv3"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Environment :: GPU'
]
include = ["./npeg/bindings/_npeg_core.so", "./npeg/bindings/_npeg_core.dll"]
keywords = ["img", "avx", "opencl", "cuda", "processing", "computation"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.0"
ruff = "^0.0.257"
black = "^23.1.0"
pyright = "^1.1.299"
mypy = "^1.1.1"
pre-commit = "^3.2.0"
tox = "^4.4.7"
tox-gh-actions = "^3.1.0"
commitizen = "^2.42.1"
meson = "^1.0.1"
ninja = "^1.11.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build_release_lib = "scripts.build:build_release_lib"
build_dev_lib = "scripts.build:build_dev_lib"
build_pkg = "scripts.build:build_pkg"
clean = "scripts.build:clean"
npeg_version = "scripts.version:get_npeg_version"
npeg_core_version = "scripts.version:get_npeg_core_version"


[tool.pylint]
max-line-length = 120
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "cyclic-import",
    "unspecified-encoding",
    "redefined-outer-name",
    "useless-return",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
color = true
line-length = 120

[tool.mypy]
python_version = '3.10'

[tool.pyright]
